--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,55 @@
-h1{
-  color: orange;
+* {
+	margin: 0;
+	box-sizing: border-box;
+}
+
+html {
+	font-size: 62.5%;
+}
+
+body {
+	font-size: 1.6rem;
+	max-width: 128rem;
+	border: 1px solid;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+.app {
+	max-width: 50rem;
+	width: 100%;
+	border: 1px solid;
+	padding: 2rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 8px;
+	justify-content: center;
+	gap: 1rem;
+}
+
+.app-logo {
+	max-width: 100%;
+}
+
+.display-items {
+	padding-inline-start: 0;
+	display: flex;
+	flex-wrap: wrap;
+	list-style: none;
+	padding: 1rem;
+	gap: 8px;
+}
+
+.display-items li {
+	padding: 8px;
+	/* border: 1px solid; */
+	border-radius: 8px;
+	flex-grow: 1;
+	text-align: center;
+	box-shadow: 3px 6px 10px 0px rgba(0, 0, 0, 0.1),
+		2px 3px 10px 0px rgba(0, 0, 0, 0.1);
 }
