--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -43,6 +43,8 @@ body {
 	}
 }
 .display-items {
+	// border: 1px solid;
+	width: 100%;
 	padding-inline-start: 0;
 	display: flex;
 	flex-wrap: wrap;
